argoCD-yaml/4101-deploy-dokjongban-react-study.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dokjongban-react-study-deployment
  namespace: default
  labels:
    domain: dokjongban-com
    app: dokjongban-react-study
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/instance: dokjongban-react-study
    dokjongban-react-track: blue
  annotations:
    kubernetes.io/change-cause: "version: ghcr.io/k3sforall/create-react-app-test-app:0.1.1"
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      domain: dokjongban-com
      app: dokjongban-react-study
      dokjongban-react-track: blue
  template:
    metadata:
      labels:
        domain: dokjongban-com
        app: dokjongban-react-study
        app.kubernetes.io/instance: dokjongban-react-study
        dokjongban-react-track: blue
    spec:
      containers:
      - name: dokjongban-react-study
        image: ghcr.io/k3sforall/create-react-app-test-app:sha-5073c67
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet: { path: "/", port: 3000 }
          initialDelaySeconds: 3
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: "/", port: 3000 }
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
