argoCD-yaml/4200-svc-dokjongban-jen-react.yaml
apiVersion: v1
kind: Service
metadata:
  name: dokjongban-jen-react-service
  namespace: default
  labels:
    domain: dokjongban-com
    app: dokjongban-jen-react-service
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/instance: dokjongban-jen-react-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    domain: dokjongban-com
    app: dokjongban-jen-react-service
    dokjongban-react-track: blue
  ports:
    - name: http
      port: 80
      targetPort: 3000
